# EV-Charging-Infrascturctre

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  Readme.md
data/: chargers.db
migrations/: 0001_init.sql
src/: main.rs
src/analytics/: plot.rs
src/charge_point/: charger.rs  mod.rs  ws_client.rs
src/cms/: db.rs  server.rs
src/hardware/: emu.rs  mod.rs
src/ocpp/: messages.rs  mod.rs
src/status/: cli.rs
