[package]
name = "ev_charging_infra"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
plotters = "0.3.5"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
